Bump hedera-app to 0.78.0-rc.6
Signed-off-by: Bilyana Gospodinova <bilyana.gospodinova14@gmail.com>